Sun Sep  4 00:11:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_const_set): show the previous definition
	  location.  [EXPERIMENTAL]

Sat Sep  3 23:56:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (sizeof_struct_dirent_too_small): check if struct
	  dirent.d_name is too small.

	* configure.in (RUBY_MINGW32): take tool prefix from CC.

Sat Sep  3 23:52:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_next_argv): open in default text mode.
	  [ruby-core:39234] [Bug #5268]

Sat Sep  3 18:40:57 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/thread.rb (SizedQueue#max=) raise ArgumentError if max is not
	  positive number. patch by Masaki Matsushita.
	  [ruby-dev:44449] [Bug #5259]

	* test/thread/test_queue.rb (test_sized_queue_initialize,
	  test_sized_queue_assign_max): add tests for it.

Fri Sep  2 21:11:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (validate_enc_binmode, prep_stdio): default to text mode on
	  dosish platforms.  [ruby-core:38822] [Bug #5164]

	* transcode.c (rb_econv_prepare_options): keep default ecflags
	  unchanged if no options.

Fri Sep  2 14:36:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_const_defined_class): search
	  ancestors only when global scope.  [ruby-core:39227] [Bug #5264]

Fri Sep  2 09:58:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_string, parser_yylex): ignore a backslash
	  which prefixes an non-ascii character, which has no escape
	  syntax.  [ruby-core:39222] [Ruby 1.9 - Bug #5262]

Fri Sep  2 04:05:25 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: emit strings tagged as
	  ascii-8bit as binary in YAML.
	* test/psych/test_string.rb: corresponding test.

Fri Sep  2 01:07:14 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): substitute machine dependent magic number.
