@@ -1,3 +1,9 @@
+Sun Sep  4 00:47:39 2011  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* test/ruby/test_fiber.rb (TestFiber#test_no_valid_cfp):
+	  add a test. Unlike TestThread#test_no_valid_cfp,
+	  this test succeeds even if win32ole is required (see r33153).
+
 Sun Sep  4 00:11:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* variable.c (rb_const_set): show the previous definition
